# 3D-FAST

./: CMakeLists.txt  README.md  bugs.txt  icon.rc  makePlugins.py  prefs.etc  res.qrc
cmake/: FindMatlab.cmake  Packaging.cmake
db/: dbconfig.etc
db/sql/: create_tables.sql
forms/: AboutDialog.ui  FaceAppMain.ui  HelpDialog.ui  LandmarksDialog.ui  LicensesDialog.ui  ModelInfoDialog.ui  OptionsDialog.ui  SplashWindow.ui
include/: 3dfast_Config.h.in  AboutDialog.h  ActionExportPDF.h  CoreDialogs.h  FaceAppMain.h  FaceModelManager.h  HelpDialog.h  LandmarksDialog.h  LicensesDialog.h  ModelInfoDialog.h  MultiFaceModelViewer.h  OptionsDialog.h  SplashWindow.h
licenses/: VTK.txt  assimp.txt
plugins/ToolActions/: CMakeLists.txt
plugins/ToolActions/include/: ActionAddLandmark.h  ActionCropFace.h  ActionDeleteLandmark.h  ActionDetectFace.h  ActionMoveLandmarks.h  ActionToggleCalipers.h  ToolActions.h
plugins/ToolActions/src/: ActionAddLandmark.cpp  ActionCropFace.cpp  ActionDeleteLandmark.cpp  ActionDetectFace.cpp  ActionMoveLandmarks.cpp  ActionToggleCalipers.cpp  ToolActions.cpp
plugins/ViewActions/: CMakeLists.txt
plugins/ViewActions/include/: ActionToggleShowBoundary.h  ActionToggleShowLandmarks.h  ViewActions.h
plugins/ViewActions/src/: ActionToggleShowBoundary.cpp  ActionToggleShowLandmarks.cpp  ViewActions.cpp
plugins/curvature/: CMakeLists.txt
plugins/curvature/include/: AbsCurvature.h  CoreCurvature.h  GaussianCurvature.h  MaxCurvature.h  MeanCurvature.h  MinCurvature.h  NormalDeterminant.h
plugins/curvature/src/: AbsCurvature.cpp  CoreCurvature.cpp  GaussianCurvature.cpp  MaxCurvature.cpp  MeanCurvature.cpp  MinCurvature.cpp  NormalDeterminant.cpp
plugins/distances/: CMakeLists.txt  icons.qrc
plugins/distances/include/: CoreDistances.h  UniformDistance.h
plugins/distances/src/: CoreDistances.cpp  UniformDistance.cpp
plugins/io/: CMakeLists.txt
plugins/io/include/: CoreFileIO.h  MatlabFileIO.h  OBJFileIO.h  XMLFileIO.h
plugins/io/src/: CoreFileIO.cpp  MatlabFaceModelExport.cpp  MatlabFaceModelImport.cpp  OBJFileIO.cpp  XMLFileIO.cpp
plugins/visualisation/: CMakeLists.txt  iconsv.qrc
plugins/visualisation/include/: CoreVisualisations.h  PointsVisualisation.h  SurfaceVisualisation.h  TextureVisualisation.h  WireframeVisualisation.h
plugins/visualisation/src/: CoreVisualisations.cpp  PointsVisualisation.cpp  SurfaceVisualisation.cpp  TextureVisualisation.cpp  WireframeVisualisation.cpp
src/: AboutDialog.cpp  ActionExportPDF.cpp  CoreDialogs.cpp  FaceAppMain.cpp  FaceModelManager.cpp  HelpDialog.cpp  LandmarksDialog.cpp  LicensesDialog.cpp  ModelInfoDialog.cpp  MultiFaceModelViewer.cpp  OptionsDialog.cpp  OptionsUpdater.cpp  SplashWindow.cpp  main.cpp
